<resources>
    <string name="app_name">Spndr3</string>
    <string name="todo">TODO</string>
    <string name="transactions">Transactions</string>
    <string name="expense">Expense</string>
    <string name="rs_290">Rs 290</string>
    <string name="rs_290as">Rs 290</string>
    <string name="budget">Budget</string>
    <string name="rs_400">Rs 400</string>
    <string name="total_balance">Total Balance</string>
    <string name="add_transaction">Add transaction</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="label">Label</string>
    <string name="amount">Amount</string>
    <string name="contdesp">TODO</string>
    <string name="summary">Summary</string>
    <string name="settings">Settings</string>
    <string name="food">Food</string>
    <string name="backup_transactions">Backup Transactions</string>
    <string name="restore_transactions">Restore Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="applogo">applogo</string>
    <string name="continueq">Continue</string>
    <string name="take_control">Take control of your finances with our easy-to-use tracker.</string>
    <string name="finance_tracker_logo">Finance Tracker Logo</string>
    <string name="continue12">Continue</string>
    <string name="data_management">Data Management</string>
    <string name="app_preferences">App preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select Currency</string>
    <string name="create_pin">Create Your PIN</string>
    <string name="pin_subtitle">Set a 4-digit PIN to secure your financial data</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_your_pin">Enter Your PIN</string>
    <string name="verify_pin_subtitle">Please enter your PIN to access the app</string>
    <string name="verify">Verify</string>
    <string name="incorrect_pin">Incorrect PIN. Please try again.</string>
    <string name="update_transaction">Update Transaction</string>
</resources>